# DanielsAms326

./: CMakeLists.txt  README.md
CurveFitting/: CMakeLists.txt
Differentiation/: CMakeLists.txt
Differentiation/.kdev4/: Differentiation.kdev4
Differentiation/examples/: first_order_example.cpp
Differentiation/include/: differentiator.h  firstderivative.h  secondderivative.h
Differentiation/src/: differentiator.cpp  firstderivative.cpp  secondderivative.cpp
ExamOne/: CMakeLists.txt
ExamOne/examples/: problem_two.cpp
ExamThree/: CMakeLists.txt
ExamThree/examples/: problem.cpp
ExamThree/tools/: plots.py
ExamTwo/: CMakeLists.txt
ExamTwo/examples/: problem_one.cpp  problem_one.mw
Final/: CMakeLists.txt
Final/docs/: DanielsFinalWriteup.odt
Final/examples/: prob_one.cpp  prob_three.cpp  prob_two.cpp
Final/tools/: F2.py
HomeworkOne/: CMakeLists.txt
HomeworkOne/examples/: ProblemOne.cpp  ProblemTwo.py
HomeworkThree/: CMakeLists.txt
HomeworkThree/examples/: problem_one.cpp  problem_three.cpp  problem_two.cpp
HomeworkThree/include/: improved_sort.h  prob_two.h
HomeworkThree/tools/: plots.py
HomeworkTwo/: CMakeLists.txt
HomeworkTwo/examples/: ProblemOne.cpp  ProblemTwo.cpp
Integration/: CMakeLists.txt
Integration/examples/: BooleExample.cpp  MidpointExample.cpp  MonteCarloExample.cpp  SimpsonsExample.cpp  TrapezoidExample.cpp
Integration/include/: boole.h  integrator.h  midpoint.h  montecarlo.h  simpson.h  trapezoid.h
Integration/src/: boole.cpp  integrator.cpp  midpoint.cpp  montecarlo.cpp  simpson.cpp  trapezoid.cpp
Interpolation/: CMakeLists.txt
Interpolation/examples/: linear_interpolation_example.cpp
Interpolation/include/: linear.h  polynomialinterpolator.h
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/examples/: matrix_testing.cpp  solver_testing.cpp
LinearAlgebra/include/: linearsolver.h  matrix.h
OrdinaryDifferentialEquations/: CMakeLists.txt
OrdinaryDifferentialEquations/examples/: implicit_solver_testing.cpp
OrdinaryDifferentialEquations/include/: euler.h  eulercromer.h  explicitodesolver.h  huen.h  ieuler.h  ieulercromer.h  implicitodesolver.h  midpoint.h  odesolver.h
OrdinaryDifferentialEquations/src/: euler.cpp  eulercromer.cpp  explicitodesolver.cpp  huen.cpp  ieuler.cpp  ieulercromer.cpp  implicitodesolver.cpp  midpoint.cpp  odesolver.cpp
OrdinaryDifferentialEquations/tools/: implicit_test.py
ParallelComputing/: CMakeLists.txt
ParallelComputing/examples/: thread_pool_example.cpp
ParallelComputing/include/: threadpool.h
ParallelComputing/src/: threadpool.cpp
RandomNumbers/: CMakeLists.txt
RandomNumbers/.kdev4/: RandomNumbers.kdev4
RandomNumbers/examples/: lcg_example.cpp  normalgenerator_example.cpp  uniformgenerator_example.cpp
RandomNumbers/include/: lcg.h  normalgenerator.h  uniformgenerator.h
RandomNumbers/src/: lcg.cpp
RandomNumbers/tools/: uniform_plot.py
RootFinding/: CMakeLists.txt
RootFinding/.kdev4/: RootFinding.kdev4
RootFinding/examples/: bisection_example.cpp  fixed_point_example.cpp  newton_example.cpp  secant_example.cpp
RootFinding/include/: bisection.h  fixedpoint.h  newtonraphson.h  rootfinder.h  secant.h
RootFinding/src/: bisection.cpp  fixedpoint.cpp  newtonraphson.cpp  rootfinder.cpp  secant.cpp
